# rover_2019

./: .gitignore  README.md
catkin_ws/src/arm_joy_control/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/arm_joy_control/launch/: arm_joy.launch
catkin_ws/src/arm_joy_control/msg/: ArmJoyMsg.msg
catkin_ws/src/arm_joy_control/src/: arm_subsys_control.cpp
catkin_ws/src/base_station/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/base_station/launch/: base_station.launch
catkin_ws/src/base_station/msg/: GpsMsg.msg  LedMsg.msg  MotorDiagnosticMsg.msg  TrajectoryMsg.msg
catkin_ws/src/base_station/src/: bs_subsys_control.cpp
catkin_ws/src/drive_control/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/drive_control/avr/: README.md
catkin_ws/src/drive_control/launch/: drive.launch
catkin_ws/src/life_detection/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/life_detection/launch/: life_detection.launch
catkin_ws/src/life_detection/msg/: LDControl.msg  LDSensor.msg
catkin_ws/src/life_detection/src/: ld_subsys_control.cpp
catkin_ws/src/pinger/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/pinger/launch/: pinger.launch
catkin_ws/src/pinger/src/: pinger_main.cpp
catkin_ws/src/rover_diagnostics/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/rover_startup/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/watchdog/: CMakeLists.txt  README.md  SensorData.md  data_viewer.launch  package.xml
catkin_ws/src/watchdog/launch/: watchdog.launch
catkin_ws/src/watchdog/src/: watchdog_main.cpp
(+30 files in other folders)
